# gpfilter.py

./: .gitignore  CITATION.cff  README.md  pyproject.toml
gpFilter/: gp_ssm_filterpy.py  gp_ssm_torchfilter.py  helper.py  imm_pf.py  kernelTest.py  multi_gp.py  util.py
gpy/: GP_BF.py  dynamicSystem.py  examples.ipynb  filterExample.ipynb  immgpbf_example.ipynb  threeTank.py  threeTankExample.ipynb  threeTankFilter.ipynb
hvac/: flexHouse.py
imm-gp-bf/: dynamicSystem.py  gp_ssm_filterpy.py  imm_pf.py  test.py  test_filterpy.py  test_torchfilter.py  threeTank.py  threeTank_torchfilter.py  util.py
src/: __init__.py
src/example/: test_filterpy.py  test_torchfilter.py
src/filterpy_addon/: __init__.py  gp_ssm_filterpy.py
src/gp/: kernel.py  multi_gp.py
src/gpfilter/example/: __init__.py  test_filterpy.py  test_torchfilter.py
src/gpfilter/filterpy_addon/: gp_ssm_filterpy.py
src/gpfilter/gp/: __init__.py  multi_gp.py
src/gpfilter/system/: __init__.py
src/gpfilter/torchfilter_addon/: __init__.py  gp_ssm_torchfilter.py  imm_pf.py  threeTank_torchfilter.py
src/system/: threeTank.py
src/torchfilter_addon/: gp_ssm_torchfilter.py  measurement.py  threeTank_torchfilter.py
src/utils/: __init__.py  helper.py  util.py
torchfilter/: _linear_system_fixtures.py  _linear_system_models.py  gpModel.py  gp_ssm.py  imm_pf.py  measurement.py  test_filters.py  test_torchfilter.py
waterTank/: GP_BF.py  dynamicSystem.py  gp-ukf_threeTank.py  helper.py  imm-ukf_threeTank.py  imm_gp-ukf_threeTank.py  kernel.py  threeTank.py  threeTank_GP.py  threeTank_sim.py  util.py
(+1 files in other folders)
